--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sequelize": "^6.25.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.5.2"
   }
 }
